--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -277,7 +277,7 @@ ul#sub-nav
 
 		&.icon-cloud a
 		{
-			background-image: url(/assets/images/cloud.png);
+			background-image: url(../images/cloud.png);
 			background-repeat: no-repeat;
 			background-position: 14px 50%;
 			padding-left: 45px;
