--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<img src="/assets/images/aus-coat-of-arms.png" class="pull-right" />	
+				<img src="<!-- @path assets/images/aus-coat-of-arms.png -->" class="pull-right" />	
 			</div>
 		</div>
 
