--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -327,7 +327,7 @@ ul
 	&.link-list
 	{
 		margin: 0 0 0 15px;
-		list-style: url(/assets/images/chevron-right.png);
+		list-style: url(../images/chevron-right.png);
 
 		li 
 		{
@@ -521,7 +521,7 @@ a.message
 
 	div.icon-attachment
 	{
-		background-image: url(/assets/images/attachment.png);
+		background-image: url(../images/attachment.png);
 	}
 }
 
