--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-sm-12">
 				<img src="<!-- @path assets/images/aus-coat-of-arms.png -->" class="pull-right" />	
 			</div>
 		</div>
