Try container-fluid

--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,5 +1,5 @@
 <footer>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12">
 				<img src="<!-- @path assets/images/aus-coat-of-arms.png -->" class="pull-right" />	
