--- a/includes/_header.html
+++ b/includes/_header.html
@@ -1,7 +1,7 @@
 <!-- @include add_dialog -->
 
 <header>
-  <div class="container">
+  <div class="container-fluid">
     
     <div id="search">
       <div>Find government services and information</div>
