Fix path to home in account header

--- a/includes/_account_bar.html
+++ b/includes/_account_bar.html
@@ -1,5 +1,5 @@
 <div id="account-bar">
 	<div class="container-fluid">
-		<a href="/" id="logo">business.gov.au</a>
+		<a href="<!-- @path /index.html -->" id="logo">business.gov.au</a>
 	</div>
 </div>
