--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,13 +1,13 @@
 $link-color: rgb(0, 94, 165);
 $link-visited-color: rgb(46, 138, 202);
 $selected-color: #f5f5f5;
-$selected-bg-color: $link-color;
+$selected-bg-color: rgb(13, 122, 191);
 
-$header-bg-color: #ccc;
+$header-bg-color: rgb(221, 221, 221);
 
 $blue: rgb(0, 94, 165);
-$light-blue: #C2D7E8;
-$extra-light-blue-bg: #F3F7FA;
+$light-blue: rgb(233, 243, 252);
+$extra-light-blue: lighten($light-blue, 2%);
 
 $thin-border: solid 1px #e9e9e9;
 $thick-border: solid 5px $light-blue;
@@ -46,7 +46,7 @@ a
 
 #account-bar
 {
-	background-color: #222;
+	background-color: rgb(51, 51, 51);
 
 	a#logo
 	{
@@ -107,7 +107,7 @@ nav
 			{
 				display: inline-block;
 				padding: 10px 30px;
-				background-color: #e3e3e3;
+				background-color: lighten($header-bg-color, 5%);
 				text-decoration: none;
 
 				span
@@ -126,7 +126,7 @@ nav
 
 				&:hover
 				{
-					background-color: #f5f5f5;
+					background-color: lighten($header-bg-color, 10%);
 				}
 
 				&.current, &.current-parent
@@ -251,7 +251,7 @@ ul#sub-nav
 
 			&:hover
 			{
-				background-color: $extra-light-blue-bg;
+				background-color: $light-blue;
 			}
 		}
 
@@ -505,7 +505,7 @@ a.message
 
 	&:hover
 	{
-		background-color: $extra-light-blue-bg;
+		background-color: $extra-light-blue;
 	}
 
 	div.icons
@@ -541,11 +541,33 @@ div.message-list-preview
 div.section-box
 {
 	margin: 15px 0;
-	padding: 8px 10px;
-	background-color: $extra-light-blue-bg;
+	padding: 8px 15px;
+	background-color: $extra-light-blue;
 }
 
 div.section-footer
 {
 	margin: 15px 0 30px 0;
+}
+
+a.card
+{
+	background-color: rgb(247, 247, 247);
+	padding: 15px 20px;
+	margin: 0 0 5px 0;
+	font-weight: 300;
+	color: #333;
+	text-decoration: none;
+	display: block;
+
+	div.heading
+	{
+		font-weight: 600;
+		color: #333;
+	}
+
+	&:hover
+	{
+		background-color: $light-blue;
+	}
 }
