--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -308,6 +308,14 @@ h2
 	border-bottom: $thick-border;
 }
 
+h3
+{
+	font-size: 13pt;
+	font-weight: 600;
+	color: #333;
+	margin: 15px 0;
+}
+
 div.sub-head
 {
 	margin: 5px 0 45px 0;
