--- a/includes/_messages_data.html
+++ b/includes/_messages_data.html
@@ -5,7 +5,7 @@
 		<div class="date">{{ date }}</div>
 		<div class="from">{{ from }}</div>
 		<div class="subject">{{ subject }}</div>
-		<div class="tags">
+		<div class="tag-list">
 			{{#tags}}
 			<span>{{ . }}</span>
 			{{/tags}}
