--- a/includes/_messages_data.html
+++ b/includes/_messages_data.html
@@ -18,7 +18,7 @@
 var messages = { "messages": [
 	{
 		"date": "Tue 5 May",
-		"from": "ASIC",
+		"from": "Australian Securities and Investments Commision",
 		"subject": "Successful renewal of business name - Jane's Bakery",
 		"attachments": [ "Receipt.pdf" ],
 		"read": false,
@@ -27,15 +27,15 @@ var messages = { "messages": [
 	},
 	{
 		"date": "Mon 4 May",
-		"from": "ATO",
-		"subject": "Your application",
+		"from": "Australian Taxation Office",
+		"subject": "RE: Your application",
 		"attachments": ["Form.pdf", "Info.pdf"],
 		"read": false,
 		"tags": [ "ATO", "Tax", "Form" ]
 	},
 	{
 		"date": "Thu 30 Apr",
-		"from": "ASIC",
+		"from": "Australian Securities and Investments Commision",
 		"subject": "ASIC Connect account activation",
 		"attachments": [],
 		"read": true,
@@ -43,7 +43,7 @@ var messages = { "messages": [
 	},
 	{
 		"date": "Thu 30 Apr",
-		"from": "ASIC",
+		"from": "Australian Securities and Investments Commision",
 		"subject": "Confirm your email address",
 		"attachments": [],
 		"read": true,
@@ -51,7 +51,7 @@ var messages = { "messages": [
 	},
 	{
 		"date": "Mon 27 Apr",
-		"from": "ATO",
+		"from": "Australian Taxation Office",
 		"subject": "ATO Small Business News",
 		"attachments": [],
 		"read": false,
