--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -476,3 +476,25 @@ a.card
 
 @import 'messages';
 @import 'filter_box';
+
+div.alpha
+{
+	font-weight: 700;
+	font-size: 10pt;
+	color: #555;
+	padding: 5px 0;
+	margin: 20px 0 0 0;
+	border-bottom: $thin-border;
+}
+
+ul.alpha-list
+{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	li
+	{
+		margin: 5px 0 0 0;
+	}
+}
