Fix message preview

--- a/includes/_account_bar.html
+++ b/includes/_account_bar.html
@@ -1,5 +1,9 @@
 <div id="account-bar">
 	<div class="container-fluid">
-		<a href="<!-- @path /index.html -->" id="logo">business.gov.au</a>
+		<a id="logo" href="<!-- @path /index.html -->">business.gov.au</a>
+		<div id="user" class="pull-right">
+			<input type="text"></input>
+			<a href="#">Jane Citizen</a>
+		</div>
 	</div>
 </div>
