--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,32 +44,6 @@ a
 	}
 }
 
-#account-bar
-{
-	background-color: rgb(51, 51, 51);
-
-	a#logo
-	{
-		display: inline-block;
-		font-size: 14pt;
-		font-weight: 600;
-		padding: 12px 0;
-		color: #999;
-		text-decoration: none;
-
-		&:visited
-		{
-			color: #999;
-		}
-
-		&:hover
-		{
-			color: #f5f5f5;
-			text-decoration: none;
-		}
-	}
-}
-
 header
 {
   background-color: $header-bg-color;
@@ -482,6 +456,7 @@ a.card
 	}
 }
 
+@import 'account_header';
 @import 'messages';
 @import 'addresses';
 @import 'filter_box';
