--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -476,6 +476,32 @@ a.btn
 	}
 }
 
+ul.permissions-list
+{
+	&.editable
+	{
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+}
+
+span.or-cancel
+{
+	span
+	{
+		margin: 0 0 0 4px;
+		color: #666;	
+	}
+	
+	a
+	{
+		color: #990000;
+		text-decoration: none;	
+	}
+	
+}
+
 table.table
 {
 	th, td
