--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -478,11 +478,22 @@ a.btn
 
 ul.permissions-list
 {
+	li
+	{
+		list-style-image: url(../images/check.png);
+		
+	}
+	
 	&.editable
 	{
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		
+		li
+		{
+			list-style-image: none;
+		}
 	}
 }
 
