--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -469,10 +469,12 @@ a.btn
 {
 	color: #fff;
 	text-decoration: none;
+	font-size: 12pt;
 	
 	&.btn-default
 	{
 		color: #111;
+		background-color: #f5f5f5;
 	}
 }
 
