Style auth rep titles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -461,6 +461,12 @@ a.card
 @import 'addresses';
 @import 'filter_box';
 
+.light-text
+{
+	color: #666;
+	font-weight: 300;
+}
+
 label{
 	font-weight: normal;
 }
