Add ind/biz tabs

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -565,3 +565,20 @@ ul.alpha-list
 		margin: 5px 0 0 0;
 	}
 }
+
+ul.nav-tabs
+{
+	a
+	{
+		text-decoration: none;	
+	}
+}
+
+span.or-cancel
+{
+	a
+	{
+		text-decoration: none;
+		color: #990000;
+	}
+}
