--- a/includes/_account_bar.html
+++ b/includes/_account_bar.html
@@ -1,6 +1,6 @@
 <div id="account-bar">
 	<div class="container-fluid">
-		<a id="logo" href="<!-- @path /index.html -->">business.gov.au</a>
+		<a id="logo" href="<!-- @path /biz1/index.html -->">business.gov.au</a>
 		<div id="user" class="pull-right">
 			<input type="text"></input>
 			<a href="#">Jane Citizen</a>
