--- a/includes/_sidebar.html
+++ b/includes/_sidebar.html
@@ -1,10 +1,10 @@
 <ul id="sub-nav">
 	<li><a href="<!-- @path biz1/index.html -->">Home</a></li>
-	<li><a href="<!-- @path messages.html -->">Messages<span>3</span></a></li>
+	<li><a href="<!-- @path messages.html -->">Inbox<span>3</span></a></li>
 	<li><a href="<!-- @path services.html -->">Services</a></li>
-	<li><a href="<!-- @path representatives.html -->">Representatives<span>2</span></a></li>
+	<li><a href="<!-- @path representatives.html -->">Authorise<span>2</span></a></li>
 	<li><a href="<!-- @path details.html -->">Business details</a></li>
-	<li><a href="<!-- @path settings.html -->">Notification settings</a></li>
+	<li><a href="<!-- @path settings.html -->">Notifications and alerts</a></li>
 	<li class="sep"></li>
 	<li class="icon-cloud"><a href="<!-- @path vault.html -->">Vault</a></li>
 </ul>
