--- a/includes/_header.html
+++ b/includes/_header.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ul>
-        <li><a href="<!-- @path index.html -->" class="home">&nbsp;<span>&nbsp;</span></a></li>
+        <!--<li><a href="<-- @path index.html ->" class="home">&nbsp;<span>&nbsp;</span></a></li></a>-->
         <li><a href="<!-- @path /content/biz1/index.html -->">Jane's Bakery<span>ABN 66 123 456 789</span></a></li>
         <!-- <li><a href="">Jane's Catering Services<span>ABN 66 987 654 321</span></a></li> -->
         <li><a href="#" class="add" data-toggle="modal" data-target="#add-biz-dialog"></a></li>
