--- a/includes/_sidebar_folders.html
+++ b/includes/_sidebar_folders.html
@@ -1,6 +1,9 @@
 <ul id="sub-nav">
 	<li><a href="<!-- @path biz1/index.html -->">Home</a></li>
 	<li><a href="<!-- @path messages.html -->">Inbox<span>3</span></a></li>
+			<li class="folder"><a href="<!-- @path folder1.html -->">Tax<span>2</span></a></li>
+			<li class="folder"><a href="<!-- @path folder2.html -->">Registrations<span>1</span></a></li>
+			<li class="folder"><a href="<!-- @path folder3.html -->">Super</a></li>
 	<li><a href="<!-- @path services.html -->">Services</a></li>
 	<li><a href="<!-- @path iwantto.html -->">I want to...</a></li>
 	<li><a href="<!-- @path representatives.html -->">Authorise<span>3</span></a></li>
