--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,6 +242,24 @@ ul#sub-nav
 				color: #fff;
 			}
 		}
+		
+		&.folder
+		{
+			margin-left: 30px;
+			
+			a
+			{
+				background-image: url(../images/folder.png);
+				background-repeat: no-repeat;
+				background-position: 14px 50%;
+				padding-left: 45px;
+			}
+			
+			&.current a 
+			{
+				background-image: url(../images/folder-white.png);
+			}
+		}
 
 		&.sep
 		{
